Fix for the non-aligned of dropdown button for windows chrome browser

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -81,7 +81,7 @@ body h1.page-title .in-tag {
 }
 
 #doc-toolbar *,
-#ji-toolbar * {line-height:1.2rem !important; vertical-align:bottom !important;}
+#ji-toolbar * {line-height:1.5rem !important; vertical-align:bottom !important;}
 
 form.search {opacity:.9; float:right}
 nav .form-inline .input-group>.form-control {width:0; transition: all 0.5s ease;}
@@ -165,8 +165,25 @@ nav form.search .input-group>input.form-control:focus{opacity:1; width:12rem}
   background: #168bb9;
 }
 
+/* so that banner do not float over fixed navbar*/
 .carousel{
   z-index: 9;
+}
+
+/* for same font-size in popups*/
+.dropdown-menu p{
+
+      font-size: .875rem !important;
+
+}
+/* fix for windows chrome which renders size of dropdown button 1px less because of round-off */
+@media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm)
+{
+    .chromeOnly{
+
+       height: 36px;
+
+    }
 }
 
 #ji-home-carousel img.jenkins {
